--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,27 @@
         android:theme="@style/Theme.Mobile_application_development_labsheet5"
         tools:targetApi="31">
         <activity
+            android:name=".exercise_04_relative_layouts.Activity8"
+            android:exported="false" />
+        <activity
+            android:name=".exercise_03_linear_layouts.Activity7"
+            android:exported="false" />
+        <activity
+            android:name=".exercise_02_linear_layouts.Activity6"
+            android:exported="false" />
+        <activity
+            android:name=".exercise_01_frame_layouts.Activity5"
+            android:exported="false" />
+        <activity
+            android:name=".example_04.Activity4"
+            android:exported="false" />
+        <activity
+            android:name=".example_03_android_orientation.Activity3"
+            android:exported="false" />
+        <activity
+            android:name=".example_02_android_layout_gravity.Activity2"
+            android:exported="false" />
+        <activity
             android:name=".example_01_foreground_attribute.Activity1"
             android:exported="true">
             <intent-filter>
